--- a/n2n_proxy/Dockerfile
+++ b/n2n_proxy/Dockerfile
@@ -1,20 +1,22 @@
-FROM golang as builder 
+FROM golang as builder
+
 WORKDIR /tmp
+
 RUN go env -w GOPROXY=https://goproxy.cn \
   && git config --global url."https://gitclone.com/".insteadOf https:// \
   && git clone https://github.com/ginuerzh/gost.git \
   && cd gost/cmd/gost \
   && go build \
-  && chmod +x gost 
+  && chmod +x gost
 
 FROM zctmdc/n2n_ntop:Alpha
 
 LABEL zctmdc <zctmdc@outlook.com>
 
 COPY *.sh  /usr/local/sbin/
-RUN chmod a+x /usr/local/sbin/*
+
 # RUN set -x \
-#   && chmod a+x /usr/local/sbin/*.sh \
+#   && chmod a+x /usr/local/sbin/* \
 #   && . /usr/local/sbin/init.sh \
 #   && gost_version=$(curl https://github.com/ginuerzh/gost/releases/latest | grep -Eo "[0-9]+\.[0-9]+\.[0-9]+") \
 #   && wget -O /tmp/gost-${myos}-${mycpu}-${gost_version}.gz https://github.com/ginuerzh/gost/releases/download/v${gost_version}/gost-${myos}-${mycpu}-${gost_version}.gz \
@@ -22,8 +24,7 @@ RUN chmod a+x /usr/local/sbin/*
 #   && chmod +x /tmp/gost-${myos}-${mycpu}-${gost_version} \
 #   && cp -f /tmp/gost-${myos}-${mycpu}-${gost_version} /usr/local/bin/gost
 
-COPY --from=builder /tmp/gost/cmd/gost/gost /usr/local/bin/gost 
-
+COPY --from=builder /tmp/gost/cmd/gost/gost /usr/local/bin/gost
 
 RUN set -x \
   # && apk add --update --no-cache psmisc curl \
