--- a/n2n_proxy/docker-compose.yaml
+++ b/n2n_proxy/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: zctmdc/n2n_ntop:Alpha
+    image: zctmdc/n2n_proxy:Alpha
     restart: always
     privileged: true
     ports:
