--- a/caddy-alidns/Dockerfile
+++ b/caddy-alidns/Dockerfile
@@ -1,8 +1,6 @@
 FROM caddy:builder AS builder
 
-RUN go env -w GOPROXY=https://goproxy.io,direct \
-  && git config --global url."https://gitclone.com/".insteadOf https:// \
-  && xcaddy build \
+RUN xcaddy build \
     # --with github.com/caddyserver/nginx-adapter \
     --with github.com/caddy-dns/alidns
 
