--- a/frp/frpc.ini
+++ b/frp/frpc.ini
@@ -1,18 +1,19 @@
 [common]
-server_addr = localhost
-server_port = 7000
-protocol = kcp
-token = 12345678
+
+server_addr = {{ .Envs.SUBDOMAIN_HOST }}
+server_port = {{ .Envs.BIND_PORT }}
+protocol = {{ .Envs.PROTOCOL }}
+token = {{ .Envs.TOKEN }}
 pool_count = 5
 
 ; log_file = console
 ; log_level = info
 ; log_max_days = 3
 
-admin_addr = 0.0.0.0
-admin_port = 7400
-admin_user = admin
-admin_pwd = admin
+admin_addr = {{ .Envs.ADMIN_ADDR }}
+admin_port= {{ .Envs.ADMIN_PORT }}
+admin_user = {{ .Envs.ADMIN_USER }}
+admin_pwd = {{ .Envs.ADMIN_PWD }}
 
 login_fail_exit = true
 tls_enable = true
@@ -23,40 +24,32 @@ user = {{ .Envs.HOSTNAME }}
 type = http
 subdomain = {{ .Envs.HOSTNAME }}
 local_ip = localhost
-local_port = 7400
+local_port = {{ .Envs.ADMIN_PORT }}
 
 [stcp_admin_UI]
 type = stcp
-sk = abcdefg
+sk = {{ .Envs.SK }}
 local_ip = localhost
-local_port = 7400
-use_encryption = false
-use_compression = false
+local_port = {{ .Envs.ADMIN_PORT }}
 
-[stcp_admin_UI_visitor]
-role = visitor
-type = stcp
-server_name = {{ .Envs.HOSTNAME }}.stcp_admin_UI
-sk = abcdefg
-bind_addr = localhost
-bind_port = 9000
-use_encryption = false
-use_compression = false
+; [stcp_admin_UI_visitor]
+; role = visitor
+; type = stcp
+; server_name = {{ .Envs.HOSTNAME }}.stcp_admin_UI
+; sk = {{ .Envs.SK }}
+; bind_addr = localhost
+; bind_port = 9000
 
 [p2p_admin_UI]
 type = xtcp
-sk = abcdefg
+sk = {{ .Envs.SK }}
 local_ip = localhost
-local_port = 7400
-use_encryption = false
-use_compression = false
+local_port = {{ .Envs.ADMIN_PORT }}
 
-[p2p_admin_UI_visitor]
-role = visitor
-type = xtcp
-server_name = {{ .Envs.HOSTNAME }}.p2p_admin_UI
-sk = abcdefg
-bind_addr = localhost
-bind_port = 9001
-use_encryption = false
-use_compression = false
+; [p2p_admin_UI_visitor]
+; role = visitor
+; type = xtcp
+; server_name = {{ .Envs.HOSTNAME }}.p2p_admin_UI
+; sk = {{ .Envs.SK }}
+; bind_addr = localhost
+; bind_port = 9001
