--- a/frp/frps.ini
+++ b/frp/frps.ini
@@ -1,22 +1,21 @@
 [common]
 bind_addr = 0.0.0.0
-bind_port = 7000
-bind_udp_port = 7001
-kcp_bind_port = 7000
+bind_port = {{ .Envs.BIND_PORT }}
+bind_udp_port = {{ .Envs.BIND_UDP_PORT }}
+kcp_bind_port = {{ .Envs.BIND_PORT }}
 
-token = 12345678
-max_pool_count = 8
-
+token = {{ .Envs.TOKEN }}
 
 ; log_file = console
 ; log_level = info
 ; log_max_days = 3
 
-dashboard_addr = 0.0.0.0
-dashboard_port = 7500
-dashboard_user = admin
-dashboard_pwd = admin
+dashboard_addr = {{ .Envs.ADMIN_ADDR }}
+dashboard_port = {{ .Envs.ADMIN_PORT }}
+dashboard_user = {{ .Envs.ADMIN_USER }}
+dashboard_pwd = {{ .Envs.ADMIN_PWD }}
 
-vhost_http_port = 80
-vhost_https_port = 443
-subdomain_host = localhost
+vhost_http_port =  {{ .Envs.VHOST_HTTP_PORT }}
+vhost_https_port =  {{ .Envs.VHOST_HTTPS_PORT }}
+
+subdomain_host = {{ .Envs.SUBDOMAIN_HOST }}
