--- a/frp/docker-compose.yaml
+++ b/frp/docker-compose.yaml
@@ -8,7 +8,8 @@ services:
       dockerfile: Dockerfile
     image: zctmdc/frp:Alpha
     hostname: zctmdc-frps
-    container_name: frps
+    container_name: zctmdc-frps
+    # network_mode: host
     restart: always
     environment:
       - SUBDOMAIN_HOST=frp.zctmdc.cc
@@ -24,40 +25,41 @@ services:
     # volumes:
     #   - /path/to/conf:/etc/frp/:ro
     command: ["/usr/sbin/frps", "-c", "/etc/frp/frps.ini"]
-    healthcheck:
-      test:
-        [
-          "CMD",
-          "sh",
-          "-c",
-          "if [[ $$(curl -u $$ADMIN_USER:$$ADMIN_PWD -H -I -m 2 -o /dev/null -s -w %{http_code} http://$$SUBDOMAIN_HOST:$$ADMIN_PORT/api/serverinfo) != 200 ]]; then echo FRPS is not running; exit 1; else echo FRPS is running; fi",
-          "||",
-          "exit 1",
-        ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+    # healthcheck:
+    #   test:
+    #     [
+    #       "CMD",
+    #       "sh",
+    #       "-c",
+    #       "if [[ $$(curl -u $$ADMIN_USER:$$ADMIN_PWD -H -I -m 2 -o /dev/null -s -w %{http_code} http://$$SUBDOMAIN_HOST:$$ADMIN_PORT/api/serverinfo) != 200 ]]; then echo FRPS is not running; exit 1; else echo FRPS is running; fi",
+    #       "||",
+    #       "exit 1",
+    #     ]
+    #   interval: 30s
+    #   timeout: 10s
+    #   retries: 3
 
   frpc:
     image: zctmdc/frp:Alpha
-    # hostname: zctmdc-frpc
-    container_name: frpc
+    hostname: zctmdc-frpc
+    container_name: zctmdc-frpc
+    network_mode: host
     restart: always
     command: ["/usr/sbin/frpc", "-c", "/etc/frp/frpc.ini"]
     environment:
       - SUBDOMAIN_HOST=frp.zctmdc.cc
     # volumes:
     #   - conf-frp:/etc/frp/
-    healthcheck:
-      test:
-        [
-          "CMD",
-          "sh",
-          "-c",
-          "if [[ $$(curl -u $$ADMIN_USER:$$ADMIN_PWD -H -I -m 2 -o /dev/null -s -w %{http_code} http://$$(hostname -s).$$SUBDOMAIN_HOST:$$VHOST_HTTP_PORT/api/status) != 200 ]]; then echo FRPS and FRPC is not running; exit 1; else echo FRPS and FRPC is running; fi",
-          "||",
-          "exit 1",
-        ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+    # healthcheck:
+    #   test:
+    #     [
+    #       "CMD",
+    #       "sh",
+    #       "-c",
+    #       "if [[ $$(curl -u $$ADMIN_USER:$$ADMIN_PWD -H -I -m 2 -o /dev/null -s -w %{http_code} http://$$(hostname -s).$$SUBDOMAIN_HOST:$$VHOST_HTTP_PORT/api/status) != 200 ]]; then echo FRPS and FRPC is not running; exit 1; else echo FRPS and FRPC is running; fi",
+    #       "||",
+    #       "exit 1",
+    #     ]
+    #   interval: 30s
+    #   timeout: 10s
+    #   retries: 3
