--- a/nginx_file_server/Dockerfile
+++ b/nginx_file_server/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx:alpine
 LABEL zctmdc <zctmdc@outlook.com>
 
-RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
+# RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories
 
 RUN apk add --update --no-cache tzdata \
   && cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
