--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,10 +25,10 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Build and push
+        name: Build and push zctmdc/frp:Alpha
         uses: docker/build-push-action@v2
         with:
           context: ./frp
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
-          tags: user/app:alpha
+          tags: zctmdc/frp:Alpha
